--- a/src/assets/sass/movie.scss
+++ b/src/assets/sass/movie.scss
@@ -1,15 +1,19 @@
 .bg-movie {
-  height: calc(100vh - 8rem);
+  min-height: calc(100vh - 8rem);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   color: #f2b84b;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 
   .blur {
-    height: 100%;
-    background: #00000044;
-    backdrop-filter: blur(5px);
+    min-height: calc(100vh - 8rem);
+    width: 100%;
+    background: #0000000b;
+    backdrop-filter: blur(3px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .info-poster {
@@ -46,18 +50,18 @@
 
   .poster {
     max-height: calc(100vh - 8rem);
-    padding: 5rem 0;
+    padding: 3rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    
+
     span {
-        font-size: 2rem;
-        background-color: #000;
-        border-radius: .5rem;
-        padding: .1rem 1rem;
-        margin-top: .5rem;
+      font-size: 2rem;
+      background-color: #000;
+      border-radius: 0.5rem;
+      padding: 0.1rem 1rem;
+      margin-top: 0.5rem;
     }
 
     img {
