Validacao das imgs

--- a/src/assets/sass/_movieCard.scss
+++ b/src/assets/sass/_movieCard.scss
@@ -20,6 +20,12 @@
     width: 100%;
   }
 
+  img.poster-img-not-found {
+    margin: 0 auto;
+    height: 39rem;
+    width: 100%;
+  }
+
   .title-card {
     font-size: 2rem;
     font-weight: normal;
