--- a/src/assets/sass/_home.scss
+++ b/src/assets/sass/_home.scss
@@ -1,12 +1,17 @@
 .home-title {
-    font-size: 3.4rem;
-    letter-spacing: .3rem;
-    color: #0D0D0D;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    text-decoration:overline underline;
+  font-size: 4.4rem;
+  letter-spacing: 0.3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-decoration: overline underline;
+  color: white;
+  text-align: center;
+  padding: 1rem 0;
+  span {
+    color: #f5c518;
+  }
 
-    span {
-        color: #f5c518;
-    }
+  @include device('s') {
+    font-size: 3.4rem;
+  }
 }
