ajustes nos links

--- a/src/assets/sass/serie.scss
+++ b/src/assets/sass/serie.scss
@@ -1,11 +1,6 @@
-a {
-    text-decoration: none;
-    color: #fff;
-}
-
 .genre {
-    color: #8697A6;
-    text-shadow: 1px 1px 2px rgb(0, 0, 0);
-    display: flex;
-    gap: 1rem;
+  color: #8697a6;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0);
+  display: flex;
+  gap: 1rem;
 }
