--- a/src/assets/sass/_movieCard.scss
+++ b/src/assets/sass/_movieCard.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: space-around;
 
-  @include device('s') {
+  @include device("s") {
     padding: 3rem;
   }
 
@@ -29,7 +29,7 @@
   .title-card {
     font-size: 2rem;
     font-weight: normal;
-  }   
+  }
 
   .vote {
     display: flex;
@@ -53,10 +53,16 @@
     justify-content: center;
     cursor: pointer;
     color: #283040 !important;
-    font-weight: bold;
-    text-decoration: none;
 
-    @include device('s') {
+    font-weight: bold;
+
+    a {
+      padding: 4rem 10rem;
+      color: #283040 !important;
+      text-decoration: none;
+    }
+
+    @include device("s") {
       margin: 0 auto;
       width: 100%;
     }
