--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -61,3 +61,19 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #585858;
 }
+
+@keyframes animateIn {
+  0% {
+    opacity: 0;
+    transform: translateY(100px); /* Define o ponto de partida do elemento */
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0); /* Define o ponto final do elemento */
+  }
+}
+
+.animateIn {
+  animation: animateIn 1s forwards; /* Duração da animação e manter o estado final */
+}
+
