--- a/src/assets/sass/_movieCard.scss
+++ b/src/assets/sass/_movieCard.scss
@@ -42,29 +42,23 @@
   .vote img {
     width: 3.2rem;
   }
-
-  .more {
-    background-color: #f2b84b;
-    width: 100%;
-    height: 4rem;
-    border-radius: 5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    color: #283040 !important;
-
-    font-weight: bold;
-
-    a {
-      padding: 4rem 10rem;
-      color: #283040 !important;
-      text-decoration: none;
-    }
-
-    @include device("s") {
-      margin: 0 auto;
-      width: 100%;
-    }
-  }
 }
+
+.btn {
+  padding: 10px 20px;
+  background-image: linear-gradient(to right, #283040 0%, #283040 50%, #f2b84b 50%, #f2b84b 100%); 
+  background-size: 200% 100%; 
+  background-position: right; 
+  background-repeat: no-repeat;
+  border: none;
+  border-radius: 5rem;
+  color: #283040;
+  text-align: center;
+  font-size: 1.7rem;
+  transition: background-position 0.3s ease;
+  
+}
+
+.btn:hover {
+  background-position: left; 
+  color: #fff; }
