--- a/src/assets/components/Footer/Footer.scss
+++ b/src/assets/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,700;1,400;1,700&display=swap');
 
 footer {
-  margin-top: 10rem;
   height: 10rem;
   background-color: #0d0d0d;
 
@@ -15,6 +14,8 @@ footer {
     justify-content: center;
     width: 100%;
     height: 100%;
+    word-wrap: break-word;
+    text-align: center;
 
     a { 
       color:#f2b84b !important;
