--- a/src/assets/sass/_movieCard.scss
+++ b/src/assets/sass/_movieCard.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-bottom: 5rem;
 
   @include device("s") {
     padding: 3rem;
@@ -58,17 +59,19 @@
   background-repeat: no-repeat;
   border: none;
   border-radius: 5rem;
-  color: #283040 !important;
   text-align: center;
   font-size: 1.7rem;
   transition: background-position 0.3s ease;
+  text-decoration: none;
+  color: #283040 !important;
+
   &:hover {
     color: #fff !important;
   }
 
   a {
     color: #283040 !important;
-
+    padding: 10px 81px;
     &:hover {
       color: #fff !important;
     }
@@ -77,5 +80,4 @@
 
 .btn:hover {
   background-position: left;
-  color: #fff !important;
 }
