mudanca de fonte

--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -15,7 +15,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   min-height: calc(100vh - 8rem) !important;
 }
 
