--- a/src/assets/sass/_home.scss
+++ b/src/assets/sass/_home.scss
@@ -1,6 +1,7 @@
 .home-title {
   font-size: 4.4rem;
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.1rem;
+  font-style: italic;
   margin-top: 1rem;
   margin-bottom: 1rem;
   text-decoration: overline underline;
