--- a/src/assets/sass/_movieCard.scss
+++ b/src/assets/sass/_movieCard.scss
@@ -61,6 +61,7 @@
   border-radius: 5rem;
   text-align: center;
   font-size: 1.7rem;
+  font-weight: bold;
   transition: background-position 0.3s ease;
   text-decoration: none;
   color: #283040 !important;
@@ -71,7 +72,7 @@
 
   a {
     color: #283040 !important;
-    padding: 10px 81px;
+    padding: 10px 65px;
     &:hover {
       color: #fff !important;
     }
