--- a/src/assets/sass/_home.scss
+++ b/src/assets/sass/_home.scss
@@ -1,18 +1,31 @@
-.home-title {
+h1.home-title {
   font-size: 4.4rem;
   letter-spacing: 0.1rem;
   font-style: italic;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  text-decoration: overline underline;
   color: white;
   text-align: center;
   padding: 1rem 0;
   span {
-    color: #f5c518;
+    color: #f2b84b;
   }
 
-  @include device('s') {
+  @include device("s") {
     font-size: 3.4rem;
+  }
+}
+
+h1.title-animation {
+  font-size: 4.4rem;
+  letter-spacing: 0.1rem;
+  font-style: italic;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  padding: 1rem 0;
+
+  @include device("s") {
+    font-size: 2.8rem;
   }
 }
