--- a/src/assets/components/Footer/Footer.scss
+++ b/src/assets/components/Footer/Footer.scss
@@ -3,6 +3,9 @@
 footer {
   height: 10rem;
   background-color: #0d0d0d;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
 
   section {
     color: #fff;
